--- a/SuggestionAppUI/Pages/AdminApproval.razor
+++ b/SuggestionAppUI/Pages/AdminApproval.razor
@@ -4,12 +4,12 @@
 @inject IUserData userData
 @inject NavigationManager navManager
 
-<h1>Pending Submitssions</h1>
+<h1 class="page-heading text-uppercase">Pending Submitssions</h1>
 
-<div>
-    <div>@submissions?.Count Sbmissions</div>
-    <div>
-        <button @onclick="ClosePage"></button>
+<div class="row">
+    <div class="suggestion-count col-8 mt-2 ">@submissions?.Count Sbmissions</div>
+    <div class="col-4 close-button-section">
+        <button class="btn btn-close" @onclick="ClosePage"></button>
     </div>
 </div>
 
@@ -17,29 +17,29 @@
 {
     foreach (var s in submissions)
     {
-        <div>
-            <div>
-                <button @onclick="(() => ApproveSubmission(s))">Approve</button>
-                <button @onclick="(() => RejectSubmission(s))">Reject</button>
+        <div class="row submission">
+            <div class="col-lg-2 col-md-3 col-sm-4">
+                <button type="button" class="btn btn-approve" @onclick="(() => ApproveSubmission(s))">Approve</button>
+                <button type="button" class="btn btn-reject" @onclick="(() => RejectSubmission(s))">Reject</button>
             </div>
-            <div>
-                <div>
+            <div class="col-lg-10 col-md-9 col-sm-8">
+                <div >
                     @if (currentEditingTitle == s.Id)
                     {
-                        <EditForm Model="@editedTitle" OnSubmit="(() => SaveTitle(s))">
-                            <InputText @bind-Value="editedTitle"/>
-                            <button type="submit">
-                                <span class="oi oi-check"></span>
+                        <EditForm class="approval-edit-form" Model="@editedTitle" OnSubmit="(() => SaveTitle(s))">
+                            <InputText class="form-control approval-edit-field" @bind-Value="editedTitle"/>
+                            <button class="btn" type="submit">
+                                <span class="oi oi-check submission-edit-approve"></span>
                             </button>
-                            <button @onclick="(() => currentEditingTitle = string.Empty)">
-                                <span class="oi oi-x"></span>
+                            <button type="button" class="btn" @onclick="(() => currentEditingTitle = string.Empty)">
+                                <span class="oi oi-x submission-edit-reject"></span>
                             </button>
                         </EditForm>
                     }
                     else
                     {
                         @s.Suggestion
-                        <span class="oi oi-pencil" @onclick ="(() => EditTitle(s))"></span>
+                        <span class="oi oi-pencil submission-edit-icon" @onclick ="(() => EditTitle(s))"></span>
                     }
                 </div>
                 <div>
@@ -51,13 +51,13 @@
                 <div>
                     @if (currentEdittingDescription == s.Id)
                     {
-                        <EditForm Model="@editedDescription" OnSubmit="(() => SaveDescription(s))">
-                            <InputText @bind-Value="editedDescription"/>
-                            <button type="submit">
-                                <span class="oi oi-check"></span>
+                        <EditForm class="approval-edit-form" Model="@editedDescription" OnSubmit="(() => SaveDescription(s))">
+                            <InputText class="form-control aprroval-edit-field" @bind-Value="editedDescription"/>
+                            <button class="btn" type="submit">
+                                <span class="oi oi-check submission-edit-approve"></span>
                             </button>
-                            <button @onclick="(() => currentEdittingDescription =string.Empty)">
-                                <span class="oi oi-x"></span>
+                            <button type="button" class="btn" @onclick="(() => currentEdittingDescription =string.Empty)">
+                                <span class="oi oi-x submission-edit-reject"></span>
                             </button>
                         </EditForm>
 
@@ -65,7 +65,7 @@
                     else
                     {
                         @s.Description
-                        <span class="oi oi-pencil" @onclick="(() => EditDescription(s))"></span>
+                        <span class="oi oi-pencil submission-edit-icon" @onclick="(() => EditDescription(s))"></span>
                     }
                 </div>
             </div>
