--- a/SuggestionAppUI/Pages/Details.razor
+++ b/SuggestionAppUI/Pages/Details.razor
@@ -1,35 +1,39 @@
 ﻿@page "/Details/{Id}"
 @inject AuthenticationStateProvider authProvider
+@inject NavigationManager navManager
 @inject ISuggestionData suggestionData
 @inject IUserData userData
-@inject NavigationManager navManager
+@inject IStatusData statusData
 
-<h1>Suggestion Details</h1>
-<div>
-    <div>
+<h1 class="page-heading text-uppercase">Suggestion Details</h1>
+<div class="row justify-content-center detail-form">
+    <div class="col-xl-8 col-lg-10 form-layout">
         @if (suggestion is not null)
         {
-            <div>
-                <div>
-                         <div @onclick="VoteUp">
-                             <div>@GetUpvoteTopText()</div>
-                             <span class="oi oi-caret-top"></span>
-                             <div>@GetUpvoteBottomText()></div>
+            <div class="row suggestion-detail-row">
+                <div class="col-11 suggestion-detail">
+                    <div>
+                         <div class="@GetVoteClass()" @onclick="VoteUp">
+                             <div class="text-uppercase">@GetUpvoteTopText()</div>
+                             <span class="oi oi-caret-top detail-upvote"></span>
+                             <div class="text-uppercase">@GetUpvoteBottomText()</div>
                          </div>
-                         <div>
+                         <div class="suggestion-detail-date">
                              <div>@suggestion.DateCreated.ToString("MM.dd.yyyy")</div>
                           </div>
-                 </div>
-                 <div>
-                     <div>@suggestion.Suggestion</div>
-                     <div>@suggestion.Author.DisplayName</div>
-                     <div>@suggestion.Description</div>
-                     <div>
+                    </div>
+                 <div class="suggestion-detail-text">
+                     <div class="fw-bold mb-2 suggestion-detail-suggestion">@suggestion.Suggestion</div>
+                     <div class="mb-2 suggestion-detail-author">@suggestion.Author.DisplayName</div>
+                     <div class="mb-2">@suggestion.Description</div>
+                     <div class="suggestion-entry-text-category">
                          @suggestion.Category.CategoryName
                      </div>
                  </div>
-                <div>
-                    <button @onclick="ClosePage">Close Page</button>
+                 </div>
+
+                <div class="col-1 close-button-section">
+                    <button class="btn btn-close" @onclick="ClosePage"></button>
                 </div>
 
             </div>
@@ -39,19 +43,62 @@
 
 @if (suggestion?.SuggestionStatus is not null)
 {
- <div>
-    <div>
-        <div></div>
-        <div>
-            <div>
+ <div class="row justify-content-center detail-form">
+    <div class="col-xl-8 col-lg-10 suggestion-results form-layout">
+        <div class="@GetStatusClass()"></div>
+        <div class="suggestion-detail-status-section">
+            <div class="suggestion-detail-status fw-bold mb-2 suggestion-detail-suggestion">
                 @suggestion.SuggestionStatus.StatusName
             </div>
-            <div>
+            <div class="suggestion-detail-owner-notes">
                 @((MarkupString)suggestion.OwnerNotes)
             </div>
         </div>
     </div>
 </div>
+}
+
+@if (suggestion is not null)
+{
+    <AuthorizeView Policy="Admin">
+        <div class="row justify-content-center detail-form">
+            <div class="col-xl-8 col-lg-10 form-layout admin-details">
+                <div>
+                    <div class="suggestion-detail-status fw-bold mb-2 suggestion-detail-suggestion">
+                        Set Status
+                    </div>
+                    @if (string.IsNullOrWhiteSpace(settingStatus))
+                        {
+                            <div class="admin-set-statuses">
+                                <button class="btn suggestion-entry-text-category btn-archive btn-status-completed" @onclick="@(() => settingStatus = "completed")" >completed</button>              
+                                <button class="btn suggestion-entry-text-category btn-archive btn-status-watching" @onclick="@(() => settingStatus = "watching")" >watching</button>
+                                <button class="btn suggestion-entry-text-category btn-archive btn-status-upcoming" @onclick="@(() => settingStatus = "upcoming")" >upcoming</button>
+                                <button class="btn suggestion-entry-text-category btn-archive btn-status-dismissed" @onclick="@(() => settingStatus = "dismissed")" >dismissed</button>
+                            </div>
+                        }
+                    else if(settingStatus == "completed")
+                    {
+                        <div>
+                            <input @bind="urlText" class="form-control rounded-control" type="text" placeholder="Url" aria-label="Content Url" />
+                        </div>
+                        <div class="suggestion-entry-bottom">
+                            <button class="btn btn-archive-confirm" @onclick ="CompleteSetStatus">confirm</button>
+                            <button class="btn btn-archive-reject" @onclick="(() => settingStatus = null)">cancel</button>
+                        </div>
+                    }
+                    else
+                    {
+                          <div class="suggestion-entry-bottom">
+                            <button class="btn btn-archive-confirm" @onclick ="CompleteSetStatus">confirm</button>
+                            <button class="btn btn-archive-reject" @onclick="(() => settingStatus = null)">cancel</button>
+                            </div>                      
+                    }
+                </div>
+
+            </div>
+        </div>
+    </AuthorizeView>
+    
 }
 
 
@@ -61,16 +108,55 @@
 
     private SuggestionModel suggestion;
     private UserModel loggedInUser;
+
+    private List<StatusModel> statuses;
+    private string settingStatus = string.Empty;
+    private string urlText = "";
+
+
     protected async override Task OnInitializedAsync()
     {
         suggestion = await suggestionData.GetSuggestion(Id);
         loggedInUser = await authProvider.GetUserFromAuth(userData);
+        statuses = await statusData.GetAllStatuses();
     }
+
+    private async Task CompleteSetStatus()
+    {
+        switch (settingStatus)
+        {
+            case "completed":
+                if (string.IsNullOrWhiteSpace(urlText))
+                {
+                    return;
+                }
+                suggestion.SuggestionStatus = statuses.Where(s => s.StatusName.ToLower() == settingStatus.ToLower()).First();
+                suggestion.OwnerNotes = $"You are right, this is an important topic for developers. We created a resource about it here: <a href ='{urlText}' target='_blank'>{urlText}</a>";
+                break;
+            case "watching":
+                suggestion.SuggestionStatus = statuses.Where(s => s.StatusName.ToLower() == settingStatus.ToLower()).First();
+                suggestion.OwnerNotes = "We noticed the interest this suggestion is getting! If more people are interested we will address this topic in an upcoming resource.";
+                break;
+            case "upcoming":
+                suggestion.SuggestionStatus = statuses.Where(s => s.StatusName.ToLower() == settingStatus.ToLower()).First();
+                suggestion.OwnerNotes = "Great suggestion! We have a resource in the pipeline to address this topic.";
+                break;
+            case "dismissed":
+                suggestion.SuggestionStatus = statuses.Where(s => s.StatusName.ToLower() == settingStatus.ToLower()).First();
+                suggestion.OwnerNotes = "Sometimes a good idea doesn't fit within our scope and vision. This is one of those ideas.";
+                break;
+            default:
+                return;
+        }
+        settingStatus = null;
+        await suggestionData.UpdateSuggestion(suggestion);
+    }
+
     private void ClosePage()
     {
         navManager.NavigateTo("/");
     }
-        private string GetUpvoteTopText()
+    private string GetUpvoteTopText()
     {
         if (suggestion.UserVotes?.Count >0)
         {
@@ -78,10 +164,10 @@
         }
         else
         {
-         if (suggestion.Author.Id == loggedInUser?.Id)
-         {
+            if (suggestion.Author.Id == loggedInUser?.Id)
+            {
                 return "Awaitng";
-         }
+            }
             else
             {
                 return "Click To";
@@ -101,7 +187,7 @@
         }
     }
 
-        private async Task VoteUp()
+    private async Task VoteUp()
     {
         if (loggedInUser is not null)
         {
@@ -120,5 +206,36 @@
         {
             navManager.NavigateTo("/MicrosoftIdentity/Account/SignIn", true);
         }
+    }
+    private string GetVoteClass()
+    {
+        if (suggestion.UserVotes is null || suggestion.UserVotes.Count ==0)
+        {
+            return "suggestion-detail-no-votes";
+        }
+        else if(suggestion.UserVotes.Contains(loggedInUser?.Id))
+        {
+            return "suggestion-detail-voted";
+        }
+        else
+        {
+            return "sugestion-detail-not-voted";
+        }
+    }
+    private string GetStatusClass()
+    {
+        if (suggestion is null || suggestion.SuggestionStatus is null)
+        {
+            return "suggestion-detail-status-none";
+        }
+        string ouput = suggestion.SuggestionStatus.StatusName switch
+        {
+            "Completed" => "suggestion-detail-status-completed",
+            "Watching" => "suggestion-detail-status-watching",
+            "Upcoming" => "suggestion-detail-status-upcoming",
+            "Dismissed" => "suggestion-detail-status-dismissed",
+            _ => "suggestion-detail-status-none",
+        };
+        return ouput;
     }
 }
