--- a/SuggestionAppUI/Pages/Index.razor
+++ b/SuggestionAppUI/Pages/Index.razor
@@ -33,18 +33,34 @@
                 <div class="suggestion-entry">   
                     <div class="@GetVoteClass(s)" @onclick="(() => VoteUp(s))">
                         <div class="text-uppercase">@GetUpvoteTopText(s)</div>
-                        <span class ="oi oi-caret-top" style="font-size:3rem;"></span>
+                        <span class ="oi oi-caret-top entry-upvote"></span>
                         <div class="text-uppercase">@GetUpvoteBottomText(s)</div>
                     </div>
                     <div class="suggestion-entry-text">
                         <div class="suggestion-entry-text-title" @onclick="(() => OpenDetails(s))">
                             @s.Suggestion
                         </div>
-                        <div>
-                            <div class="suggestion-entry-text-category" @onclick="(() => OpenDetails(s))">
-                                @s.Category?.CategoryName
+                        
+                            @if(archivingSuggestion is null || archivingSuggestion.Id != s.Id)
+                            {
+                                <div class="suggestion-entry-bottom">           
+                                    <div class="suggestion-entry-text-category" @onclick="(() => OpenDetails(s))">
+                                                @s.Category?.CategoryName
+                                     </div>   
+                                     <AuthorizeView Policy="Admin">
+                                         <button @onclick="(() => archivingSuggestion = s)" class="btn suggestion-entry-text-category btn-archive">
+                                           archive
+                                         </button>
+                                     </AuthorizeView>
                             </div>
-                        </div>
+                        }
+                        else
+                        {
+                            <div class="suggestion-entry-bottom">
+                                <button class="btn btn-archive btn-archive-confirm" @onclick ="ArchiveSuggestion"> confirm</button>
+                                <button class="btn btn-archive btn-archive-reject" @onclick ="(() => archivingSuggestion = null)"> cancel</button>
+                            </div>
+                        }
                     </div>
                         <div class="suggestion-entry-status @GetSuggestionStatusClass(s)">
                              <div class="suggestion-entry-status-text">
@@ -56,7 +72,7 @@
 
         }
     </div>
-  
+
   <div class="col-md-4 col-xl-3">
     @if (categories is not null)
     {
@@ -90,10 +106,11 @@
     private List<SuggestionModel> suggestions;
     private List<CategoryModel> categories;
     private List<StatusModel> statuses;
+    private SuggestionModel archivingSuggestion;
 
     private string selectedCategory = "All";
     private string selectedStatus = "All";
-    private string searchText = string.Empty;
+    private string searchText = "";
     bool isSortedByNew = true;
 
     protected async override Task OnInitializedAsync()
@@ -102,6 +119,15 @@
         statuses = await statusData.GetAllStatuses();
         await LoadAndVerifyUser();
 
+    }
+
+    private async Task ArchiveSuggestion()
+    {
+        archivingSuggestion.Archived = true;
+        await suggestionData.UpdateSuggestion(archivingSuggestion);
+        suggestions.Remove(archivingSuggestion);
+        archivingSuggestion = null;
+       // await FilterSuggestions();
     }
 
     private void LoadCreatePage()
