--- a/SuggestionAppUI/Pages/Profile.razor
+++ b/SuggestionAppUI/Pages/Profile.razor
@@ -5,53 +5,54 @@
 @inject IUserData userData
 @inject NavigationManager navManager
 
-<h1> My Profile</h1>
+<h1 class="page-heading text-uppercase mb-4">My Profile</h1>
 
-<div>
-    <div>
-        <button @onclick="ClosePage"></button>
+<div class="row">
+    <div class="col-12 close-button-section">
+        <button class="btn btn-close" @onclick="ClosePage"></button>
     </div>
 </div>
 
-<div>
-    <h2>My Account</h2>
-    <p>
+<div class="form-layout mb-3">
+    <h2 class="my-submission-heading">My Account</h2>
+    <p class="my-submission-text">
         <a href="MicrosoftIdentity/Account/EditProfile">
             Edit My Profile
         </a>
     </p>
 </div>
+
 @if (approved?.Count > 0)
 {
-  <div>
-    <h2> Approved Suggestions</h2>
-    <p>These are your suggestions that are currently active.</p>
+  <div class="form-layout mb-3">
+    <h2 class="my-submission-heading"> Approved Suggestions</h2>
+    <p class="my-submission-text">These are your suggestions that are currently active.</p>
 
 
         @foreach (var s in approved)
         {
-            <hr/>
-            <div>
+            <hr class="my-submission-separator"/>
+            <div class="fw-bold suggestion-detail-suggestion">
                 @s.Suggestion    
             </div>
-            <p>
+            <p class="my-submission-text">
                 @s.DateCreated.ToString("MM.dd.yyyy");
             </p>
-            <p>
+            <p class="my-submission-text">
                 Total Votes: @s.UserVotes.Count
             </p>
-            <p>
+            <p class="my-submission-text">
                 @s.Category.CategoryName
             </p>
-            <p>
+            <p class="my-submission-text">
                 @s.Description
             </p>
             @if (s.SuggestionStatus is not null)
             {
-                <div>
+                <div class="fw-bold suggestion-detail-suggestion">
                     @s.SuggestionStatus.StatusName
                     </div>
-                    <p>
+                    <p class="my-submission-text">
                         @((MarkupString)s.OwnerNotes)
                     </p>
             }
@@ -61,35 +62,35 @@
 
 @if (archived?.Count > 0)
 {
-  <div>
-    <h2> Archived Suggestions</h2>
-    <p>These are your suggestions that were active but did notgain enough traction.</p>
+  <div class="form-layout mb-3">
+    <h2 class="my-submission-heading"> Archived Suggestions</h2>
+    <p class="my-submission-text">These are your suggestions that were active but did notgain enough traction.</p>
 
 
         @foreach (var s in archived)
         {
-            <hr/>
-            <div>
+            <hr class="my-submission-separator"/>
+            <div class="fw-bold suggestion-detail-suggestion">
                 @s.Suggestion    
             </div>
-            <p>
+            <p class="my-submission-text">
                 @s.DateCreated.ToString("MM.dd.yyyy");
             </p>
-            <p>
+            <p class="my-submission-text">
                 Total Votes: @s.UserVotes.Count
             </p>
-            <p>
+            <p class="my-submission-text">
                 @s.Category.CategoryName
             </p>
-            <p>
+            <p class="my-submission-text">
                 @s.Description
             </p>
             @if (s.SuggestionStatus is not null)
             {
-                <div>
+                <div class="fw-bold suggestion-detail-suggestion">
                     @s.SuggestionStatus.StatusName
                     </div>
-                    <p>
+                    <p class="my-submission-text">
                         @((MarkupString)s.OwnerNotes)
                     </p>
             }
@@ -100,35 +101,35 @@
 
 @if (pending?.Count > 0)
 {
-  <div>
-    <h2> Pending Suggestions</h2>
-    <p>These are your suggestions that have not yet been reviewed by the administrators.</p>
+  <div class="form-layout mb-3">
+    <h2 class="my-submission-heading"> Pending Suggestions</h2>
+    <p class="my-submission-text">These are your suggestions that have not yet been reviewed by the administrators.</p>
 
 
         @foreach (var s in pending)
         {
-            <hr/>
-            <div>
+            <hr class="my-submission-separator"/>
+            <div class="fw-bold suggestion-detail-suggestion">
                 @s.Suggestion    
             </div>
-            <p>
+            <p class="my-submission-text">
                 @s.DateCreated.ToString("MM.dd.yyyy");
             </p>
-            <p>
+            <p class="my-submission-text">
                 Total Votes: @s.UserVotes.Count
             </p>
-            <p>
+            <p class="my-submission-text">
                 @s.Category.CategoryName
             </p>
-            <p>
+            <p class="my-submission-text">
                 @s.Description
             </p>
             @if (s.SuggestionStatus is not null)
             {
-                <div>
+                <div class="fw-bold suggestion-detail-suggestion">
                     @s.SuggestionStatus.StatusName
                     </div>
-                    <p>
+                    <p class="my-submission-text">
                         @((MarkupString)s.OwnerNotes)
                     </p>
             }
@@ -139,35 +140,35 @@
 
 @if (rejected?.Count > 0)
 {
-  <div>
-    <h2> Rejected Suggestions</h2>
-    <p>These are your suggestions that were not deemed to be appropriate for the suggestion site.</p>
+  <div class="form-layout mb-3">
+    <h2 class="my-submission-heading"> Rejected Suggestions</h2>
+    <p class="my-submission-text">These are your suggestions that were not deemed to be appropriate for the suggestion site.</p>
 
 
         @foreach (var s in rejected)
         {
-            <hr/>
-            <div>
+            <hr class="my-submission-separator"/>
+            <div class="fw-bold suggestion-detail-suggestion">
                 @s.Suggestion    
             </div>
-            <p>
+            <p class="my-submission-text">
                 @s.DateCreated.ToString("MM.dd.yyyy");
             </p>
-            <p>
+            <p class="my-submission-text">
                 Total Votes: @s.UserVotes.Count
             </p>
-            <p>
+            <p class="my-submission-text">
                 @s.Category.CategoryName
             </p>
-            <p>
+            <p class="my-submission-text">
                 @s.Description
             </p>
             @if (s.SuggestionStatus is not null)
             {
-                <div>
+                <div class="fw-bold suggestion-detail-suggestion">
                     @s.SuggestionStatus.StatusName
                     </div>
-                    <p>
+                    <p class="my-submission-text">
                         @((MarkupString)s.OwnerNotes)
                     </p>
             }
