--- a/SuggestionAppUI/wwwroot/css/site.css
+++ b/SuggestionAppUI/wwwroot/css/site.css
@@ -343,3 +343,225 @@ a:hover, .btn-link:hover {
     background-color: #FFF;
     border-width: 3px;
 }
+
+/* Detail page*/
+.suggestion-detail-row {
+    --bs-gutter-x: 0;
+}
+.suggestion-detail {
+    display:grid;
+    grid-template-columns: 100px 1fr;
+    padding: 0;
+}
+.suggestion-detail-no-votes,
+.sugestion-detail-not-voted,
+.suggestion-detail-voted {
+    border: 3px solid #39BAD8;
+    text-align: center;
+    line-height: 1rem;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 0.8rem;
+}
+.suggestion-detail-no-votes {
+    background-color: #DDD;
+    color: #FFF;
+    border-color: #DDD;
+}
+
+.suggestion-detail-voted {
+    background-color: #39BAD8;
+    color: #FFF;
+}
+
+.sugestion-detail-not-voted {
+    background-color: #FFF;
+    color: #39BAD8;
+}
+.detail-upvote {
+    font-size: 2.7rem;
+}
+.entry-upvote {
+    font-size: 3rem;
+}
+.suggestion-detail-date {
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.suggestion-detail-text {
+    display: flex;
+    flex-direction: column;
+    padding-left: 27px;
+    padding-right: 10px;
+    padding-top: 0;
+    padding-bottom: 10px;
+}
+.suggestion-detail-suggestion {
+    font-size: 1.25rem;
+}
+.suggestion-detail-author {
+    color: #A9A9A9;
+}
+.suggestion-results {
+    display:grid;
+    grid-template-columns: 50px 1fr;
+    padding: 0;
+    margin-top:20px;
+}
+.suggestion-detail-status-complate {
+    background-color: #B5D43A;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+.suggestion-detail-status-watching {
+    background-color: #E9354C;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+.suggestion-detail-status-upcoming {
+    background-color: #835581;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+.suggestion-detail-status-dismissed {
+    background-color: #F9C30B;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+.suggestion-detail-status-none {
+    background-color: #FFFFFF;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+.suggestion-detail-status-section {
+    padding: 1.5rem;
+}
+.suggestion-detail-status {
+    flex-grow: 1;
+}
+.suggestion-detail-owner-notes {
+    padding-bottom: 20px;
+}
+/*Approval page*/
+.submission {
+    background-color: #FFF;
+    border-radius:10px;
+    padding: 1rem;
+    margin-bottom: 1rem;
+}
+.btn-approve,
+.btn-reject {
+    width: 100%;
+    font-family: 'Montserrat', sans-serif;
+    border-radius: 10px;
+    border-width:3px;
+}
+
+.btn-approve {
+    color: #FFF;
+    background-color: #B5D43A;
+    border-color: #FFF;
+}
+    .btn-approve:hover {
+        color: #B5D43A;
+        border-color: #B5D43A;
+        background-color: #FFF;
+    }
+.btn-reject {
+    color: #FFF;
+    background-color: #E9354C;
+    border-color: #FFF;
+}
+
+    .btn-reject:hover {
+        color: #E9354C;
+        border-color: #E9354C;
+        background-color: #FFF;
+    }
+
+.approval-edit-form {
+    display: flex;
+}
+.approval-edit-field {
+    flex:1;
+    border-radius: 10px;
+}
+.submission-edit-approve {
+    color: #B5D43A;
+}
+    .submission-edit-approve:hover {
+        font-weight: 700;
+    }
+.submission-edit-reject {
+    color: #E9354C;
+}
+    .submission-edit-reject:hover {
+        font-weight: 700;
+    }
+.submission-edit-icon {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+    .submission-edit-icon:hover {
+        color: #39BAD8;
+    }
+
+    /*Profile page*/
+
+.my-submission-heading {
+    color: #000;
+    text-transform: uppercase;
+}
+.my-submission-text {
+    margin-bottom: 0;
+    padding-left: 1rem;
+}
+.my-submission-separator {
+    color: #A9A9A9;
+    height: 2px;
+    opacity: 1;
+}
+.suggestion-entry-bottom {
+    display: flex;
+}
+.btn-archive {
+    border: 0;
+    background-color: #FFF;
+    padding: 0 10px;
+    flex: unset;
+}
+.btn-archive-confirm,
+.btn-archive-reject {
+    text-transform: uppercase;
+    color: darkgray;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 0.8rem;
+    flex: 1;
+}
+.btn-archive-confirm {
+    color: #E9354C;
+}
+.admin-details {
+    margin-top: 20px;
+}
+.admin-set-statuses {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+.btn-status-completed:hover {
+    color: #B5D43A;
+}
+.btn-status-watching:hover {
+    color: #E9354C;
+}
+.btn-status-upcoming:hover {
+    color: #835581;
+}
+.btn-status-dismissed:hover {
+    color: #B9C30B;
+}
